# graph-jax

./: .gitignore  LICENSE  README.md  benchmark_pagerank.py  test.ipynb  test_algorithms.ipynb  test_api.ipynb
graph-jax/: pyproject.toml
graph-jax/algorithms/: pagerank.py
graph-jax/graph_jax.egg-info/: PKG-INFO
graph-jax/graph_jax/graphs/: graph.py  io.py  utils.py
graph-jax/graph_jax/kernels/: matrix.py  ops.py
graph-jax/graph_jax/utils/: __init__.py  set_backend.py
graph-jax/kernels/: __init__.py  ops.py  spgemm.py
graph-jax/utils/: __init__.py  hardware_detector.py
graphjax/: pyproject.toml
graphjax/graph_jax/: __init__.py
graphjax/graph_jax/algorithms/: __init__.py  algebraic_shortest_path.py  capacity.py  floyd_warshall.py  pagerank.py  shortest_path.py
graphjax/graph_jax/algorithms/cluster/: __init__.py  fcm_jax.py  kmeans.py  spectral.py  (+2 more)
graphjax/graph_jax/graphs/: __init__.py  graph.py  io.py  utils.py
graphjax/graph_jax/kernels/: __init__.py  distributed_spgemm.py  losses.py  matrix.py  min_cut.py  ops.py  parallel_spgemm.py  spgemm.py
graphjax/graph_jax/utils/: hardware_detector.py  set_backend.py
graphs/: __init__.py  graph.py  io.py
kernels/: __init__.py  activations.py  losses.py  matrix.py  ops.py  parallel_spgemm.py  spgemm.py
showcase/: benchmark_pagerank.py  clustering_demo.py  supply_chain_example.py
test/: test_algebraic_shortest_path.py  test_algorithms.ipynb  test_api.ipynb  test_clustering.py  test_dynamics.py  test_dynamics_real.py  test_fcm_jax.py  test_floyd_warshall.py  test_graph.py  test_soft_clustering.py
